# OmniMatrix

./: .gitlab-ci.yml  AGENTS.md  components.json  next-Prompt.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tsconfig.json  vite.config.js
.github/workflows/: mirror.yml
Logo-OmniMatrix/: Logo.af
src/: app.html  global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: .temp  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/matrix/: client_manager.rs  commands.rs  mod.rs
src/lib/components/: MatrixAvatar.svelte
src/lib/components/layout/: ChatArea.svelte  ChatList.svelte  LoginModal.svelte  SecurityBackupModal.svelte  SettingsView.svelte  Sidebar.svelte
src/lib/components/ui/carousel/: context.ts
src/lib/matrix/: api.ts
src/lib/state/: app.svelte.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
