[package]
name = "OmniMatrix"
version = "26.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "omnimatrix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-notification = "2.0.0"
tauri-plugin-svelte = "3"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2"
matrix-sdk = { version = "0.18.0", features = [
  "e2e-encryption",
  "qrcode",
  "sqlite",
  "markdown",
  "bundled-sqlite",
  "js",
  "indexeddb",
  "socks",
  "sso-login",
] }
tokio = { version = "1.52.3", features = ["full"] }
matrix-sdk-sqlite = "0.18.0"
url = "2.5.8"
keyring = "4.1.2"
apple-native-keyring-store = { version = "1.0.0", features = ["protected"] }
rand = "0.10.1"
mime = "0.3.17"
futures-util = "0.3.32"

[patch.crates-io]
swift-rs = { path = "patches/swift-rs" }

